src/css-modules/root.module.css
@import url("https://fonts.googleapis.com/css2?family=Original+Surfer&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");

body {
  background-color: #0f1010;
  margin: 10px 0;
  padding: 0;
}


.rootContainer {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.mainContent {
  display: flex;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 100;
}

